# indrajala

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.txt  build_docs.sh  ij.sh  indrajala_event_protocol.md  lin_install.sh  plotter.default.toml  run_tests.sh
.github/workflows/: rust.yml
attic/indrajala_v2/: .gitignore  run_tests.sh
attic/indrajala_v2/doc/: indrajala_event_protocol.md
attic/indrajala_v2/rust_indrajala/plotter/: Cargo.toml
attic/indrajala_v2/rust_indrajala/plotter/src/: main.rs
attic/indrajala_v2/tasker/: julia_1.jl  python_1.py
attic/indrajala_v2/tests/: update_testdata.sh
attic/python_indrajala/examples/: websocket_cl.py
attic/python_indrajala_v1/: setup.py
attic/python_indrajala_v1/examples/: .gitignore
attic/rust_indrajala/indrajala/: Cargo.toml
attic/rust_indrajala/indrajala/src/: in_async_llm.rs  in_async_ws.rs  indra_config.rs  indra_storage.rs  main.rs
config/: indrajala.default.service  indrajala.default.toml  indrajala.sample.python.toml  indrajala.sample.rust.toml  indrajala.sample.toml
config/certs/: readme.md
config/log/: readme.md
data/: indrajala.sample.python.toml  indrajala.sample.rust.toml
data_sources/geodata/: CO2_800k_composite.toml  DomeC2006CO2.toml  GISP2IceCoreTemperatureAlley2004.toml  LawDome2018CO2.toml  SunspotsMonthlyMean.toml
doc/: indrajala.default.service  indrajala_config.md
docs/pydoc/source/: conf.py  index.rst
embed/: indra_cp_config_default.py  indra_cp_device_display.py
examples/: Measurements.ipynb  dwd_test.ipynb  inadmin.py  indra_admin.py  indra_chat.py  indra_client_applib.py  indra_plot.py  indra_term_chat.py  py-test.py  requirements.txt  usindra.py
indralib/: pyproject.toml
indralib/src/: indra_client.py  indra_downloader.py  indra_event.py  indra_time.py
indralib/src/indralib/: indra_client.py  indra_event.py  indra_time.py
indralib/tests/: mq_cmp.py  time_tests.py
indralib/tests/source_data/: date_data.md
indraserver/: pyproject.toml  requirements.txt
indraserver/src/: async_http.py  indra_ace_mag_noaa.py  indra_ai.py  indra_db.py  indra_dispatch.py  indra_importer.py  indra_k_index_noaa.py  indra_kosync.py  indra_mqtt.py  indra_radiation_bfs.py  indra_serverlib.py  indra_ticker.py  indra_ticker_muc_weather.py  indra_ticker_weather_muc.py  indra_weather_dwd.py  indra_weather_muc.py  indrajala.py  pingpong.py  signal_server.py  ticker_muc_weather.py  zero_test.py
js_indrajala/: deploy_web.sh  index.html
js_indrajala/admin/: index.html
js_indrajala/admin/scripts/: indra_admin.js
js_indrajala/chat/: index.html
js_indrajala/chat/scripts/: indra_chat.js
js_indrajala/config/: portal_apps_default.json
js_indrajala/indralib/: package.json
js_indrajala/indralib/scripts/: indra_client.js  indra_client_gui_lib.js  indra_styles.js  indra_time.js  indralib.js
js_indrajala/indralib/tests/: indra_mqcmp_tests.js  indra_tests.js  indra_time_tests.js
js_indrajala/plot/: index.html
js_indrajala/plot/scripts/: indra_plot.js  package.json
js_indrajala/scripts/: indra_main.js
js_indralib/: index.html
js_indralib/scripts/: browser_indralib.js  node_indralib.js
js_indralib/scripts/shared/: indra_client.js  indra_styles.js  indralib.js
julia_indrajala/examples/: ws_test.jl
models/: models.json
python_indrajala/: .gitignore
python_indrajala/examples/: .gitignore  import_apple_health.py  import_google_contacts.py  indra_chat.py  indrajala.sample.toml  indrajala_apple_health_config.json.sample  indrajala_sample.service  indrajala_telegram_import_config.json.sample  s_time_plot.ipynb  solar.ipynb  ws_indra.default.toml  ws_indra.py
python_indrajala/examples/config/: indrajala.sample.toml
python_indrajala/examples/importers/: RawTests.ipynb  download_datasets.py  download_temperature_data.py  downloader.py  importer.py
python_indrajala/examples/old_importers/: indrajala_google_contacts_import_config.json.sample
python_indrajala/importers/: download_datasets.py  downloader.py  import_geodata.ipynb
python_indrajala/indrajala/: in_async_mqtt.py  in_async_websockets.py  in_signal_server.py  indrajala.py
python_indrajala/indralib/: .gitignore  LICENSE
python_indrajala/indralib/src/: indra_client.py  indra_downloader.py  indra_event.py
python_indrajala/indralib/tests/: indra_test.ipynb  indra_test.py  mqcmp_data.json  wp_decimal_time_data.json
python_indrajala/src/: Indrajala.py  IndrajalaImporters.py
python_indrajala/src/indrajala/: in_async_mqtt.py  in_async_postgres.py  in_async_websocket.py  in_async_websockets.py  in_csv_tree.py  in_postgresql.py  in_signal_server.py  indra_event.py  indra_time.py  indrajala.py
python_indrajala/src/indralib/: .gitignore  Indra_client.py  indra_client-default.toml  indra_client.py  indra_downloader.py  indra_event.py  indra_test.ipynb  indra_test.py
python_indrajala/src/old_indrajala/: Indrajala.py
python_indrajala/sub_tasks/dwd_forecast/: dwd_forecast.py
python_indrajala/sub_tasks/finance_data/: finance_data.py
python_indrajala/sub_tasks/wetter_uni_muenchen/: wetter_uni_muenchen_scraper.py  ws_indra.toml
rust_indrajala/indra_cli/: Cargo.toml
rust_indrajala/indra_cli/src/: main.rs
rust_indrajala/indra_event/: Cargo.toml
rust_indrajala/indra_event/src/: lib.rs
rust_indrajala/indrajala/: Cargo.toml
rust_indrajala/indrajala/src/: OLD_indra_event.rs  ding_dong.rs  in_async_llm.rs  in_async_mqtt.rs  in_async_rest.rs  in_async_signal.rs  in_async_sqlx.rs  in_async_tasker.rs  in_async_web.rs  in_async_ws.rs  indra_config.rs  indra_event.rs  indra_storage.rs  main.rs
rust_indrajala/plotter/: Cargo.toml
rust_indrajala/plotter/src/: main.rs
swift_indrajala/indralib/: Package.swift
swift_indrajala/indratest/: Package.swift
tasker/: julia_1.jl
test_data/: normalize_time_test_data.py  run_all_tests.py
test_data/domain/: domain_failure_cases.json
test_data/time/: normalized_bp_time_data.json  normalized_jd_time_data.json
tests/: update_testdata.sh
tests/domain_test_data/: mqcmp_data.json
web/: index.html  update_libs.sh
web/admin/: index.html
(+61 files in other folders)
