[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "indraserver"
version = "0.0.1"
authors = [{ name = "Dominik Schlösser", email = "dsc@dosc.net" }]
description = "Websocket client for the Indrajala system"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "paho-mqtt"
]

[project.urls]
"Homepage" = "https://github.com/domschl/indrajala"
"Bug Tracker" = "https://github.com/domschl/indrajala/issues"
