[package]
name = "indrajala"
version = "0.1.0"
edition = "2021"
default-run = "indrajala"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indra_event = { path = "../../rust_indrajala/indra_event" }
async-std = "*"
uuid = { version = "*", features = ["v4"] }
paho-mqtt = "*"
toml = "*"
async-channel = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
chrono = "*"
chrono-tz = "*"
tide = "*"
rustls = "*"
rustls-pemfile = "*"
tide-rustls = "*"
sqlx = { version = "*", features = ["runtime-async-std-rustls", "sqlite", "macros"] }
# native-tls = "*"
async-tls = "*"  # { version = "*", features = ["server"]}
async-tungstenite = "*"  # { version = "*", features = ["async-tls", "async-std-runtime"] }
futures = "*"
signal-hook = "*"
signal-hook-async-std = "*"
log = "*"
env_logger = "*"

