[package]
name = "plotter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "*"
chrono = "*"
tungstenite = "*"
serde_json = "*"
indra_event = { path = "../../rust_indrajala/indra_event" }
gtk = { version = "*", package = "gtk4" }
glib = "*"
plotters = { git = "https://github.com/plotters-rs/plotters" }
plotters-cairo = { git = "https://github.com/plotters-rs/plotters-cairo" }
